@@ -1,3 +1,8 @@
+2009-04-27  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
+
+	* win/tclWinSock.c: Backport fix for [Bug 2446662]: resync Win
+	behavior on RST with that of unix (EOF).
+
 2009-04-27  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/concat.n (EXAMPLES): [Bug 2780680]: Rewrote so that the spacing
